test/error/macro_args_empty.sv
// pattern: macro definition missing argument name
`define MACRO()
